fixed names under staff pic, fixed sizing on mobile of staff pic

--- a/client/src/Components/AllStaff/style.css
+++ b/client/src/Components/AllStaff/style.css
@@ -6,9 +6,9 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
-  border: bisque;
+  box-sizing: border-box;
+  border: 3px bisque;
   border-style: solid;
-  border-width: 3px;
 }
 
 .staffTextDiv {
@@ -17,12 +17,18 @@
   color:bisque;
   text-shadow: 2px 2px 2px black;
   margin-bottom: 20px;
-  
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 @media screen and (max-width: 575px) {
+
   .staffText {
     font-size: 16px;
+  }
+
+  .staffPic {
+    max-width: 375px;
   }
 }
 
